RESOLVED FIXED25910
WebkitGTK r43960 cannot compile
https://bugs.webkit.org/show_bug.cgi?id=25910
Summary WebkitGTK r43960 cannot compile
pzk5qt6ottv3z7ag
Reported 2009-05-21 00:22:42 PDT
WebCore/platform/gtk/guriescape.h is removed in r43934, but is needed by WebCore/platform/gtk/FileSystemGtk.cpp
Attachments
Xan Lopez
Comment 1 2009-05-21 02:08:48 PDT
Thanks, this is fixed in r43963.
Note You need to log in before you can comment on or make changes to this bug.