2009-05-21  Xan Lopez  <xlopez@igalia.com>

Unreviewed build fix.

        https://bugs.webkit.org/show_bug.cgi?id=25910
        WebkitGTK r43960 cannot compile

        Do not include local copy of guriescape header, which was
        removed. We now use the copy in glib.

        * platform/gtk/FileSystemGtk.cpp:

Canonical link: https://commits.webkit.org/35866@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43963 268f45cc-cd09-0410-ab3c-d52691b4dbfc